# sdss_solara

./: README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml
docs/: conf.py  index.rst
licenses/: LICENSE.rst
sdss_solara/: .env.dev  .env.prod  .env.test  __init__.py
sdss_solara/components/: common.py  message.py  message.vue
sdss_solara/pages/: __init__.py  custom_jdaviz.vue  home.py  jdaviz_embed.py
sdss_solara/tests/: test_loads.py
