[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=6.2",
  "wheel",

]
build-backend = "setuptools.build_meta"

[project]
name = "sdss_solara"
description = "Solara pages for SDSS"
readme = "README.rst"
requires-python = ">=3.10"
version = "0.1.0dev"
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }

authors = [
  { name = "Brian Cherinka", email = "bcherinka@stsci.edu" },
]

dependencies = [
  "python-dotenv>1.0",
  "sdss-tree>4.0.3",
  "sdss-access>3.0.2",
  "markdown",
  "solara[all]>1.41.0",
  "solara-ui[all]>1.41.0",
  "sdss_explorer@git+https://github.com/sdss/explorer.git#egg=py12",
  "photutils>1.13",
  "jdaviz>4.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "tomli; python_version <\"3.11\"",
]




[project.urls]
repository = "https://github.com/sdss/sdss_solara"


[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]


[tool.pytest.ini_options]
testpaths = [
  "sdss_solara",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "sdss_solara/__init*",
 "sdss_solara/conftest.py",
 "sdss_solara/*setup_package*",
 "sdss_solara/tests/*",
 "sdss_solara/*/tests/*",
 "sdss_solara/extern/*",
 "sdss_solara/version*",
 "*/sdss_solara/__init*",
 "*/sdss_solara/conftest.py",
 "*/sdss_solara/*setup_package*",
 "*/sdss_solara/tests/*",
 "*/sdss_solara/*/tests/*",
 "*/sdss_solara/extern/*",
 "*/sdss_solara/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]
